mdapi_output_dir/objects/Customer__c.object
<CustomObject>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <label>Customer</label>
    
    <nameField>
        
        <displayFormat>Customer-{00000}</displayFormat>
        
        <label>Customer Number</label>
        
        
        <type>AutoNumber</type>
        
    </nameField>
    
    <pluralLabel>Customers</pluralLabel>
    
    
    <sharingModel>ReadWrite</sharingModel>
    
    
<fields>
        
    <fullName>City__c</fullName>
        
        
    <label>City</label>
        
    <length>30</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Credit_Card_Expiration_Month__c</fullName>
        
        
    <label>Credit Card Expiration Month</label>
        
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <restricted>true</restricted>
            
        <valueSetName>Months</valueSetName>
            
    </valueSet>
        
</fields>
    <fields>
        
    <fullName>Credit_Card_Expiration_Year__c</fullName>
        
        
    <label>Credit Card Expiration Year</label>
        
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <restricted>true</restricted>
            
        <valueSetName>Future_Years</valueSetName>
            
    </valueSet>
        
</fields>
    <fields>
        
    <fullName>Credit_Card_Number__c</fullName>
        
        
    <inlineHelpText>Enter the correct format for your card including dashes.</inlineHelpText>
        
    <label>Credit Card Number</label>
        
    <length>25</length>
        
    <maskChar>X</maskChar>
        
    <maskType>creditCard</maskType>
        
        
        
        
    <type>EncryptedText</type>
        
</fields>
    <fields>
        
    <fullName>Credit_Card_Type__c</fullName>
        
        
    <label>Credit Card Type</label>
        
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <restricted>true</restricted>
            
        <valueSetName>Credit_Card_Type</valueSetName>
            
    </valueSet>
        
</fields>
    <fields>
        
    <fullName>Email__c</fullName>
        
    <caseSensitive>true</caseSensitive>
        
        
    <label>Email</label>
        
        
        
        
    <type>Email</type>
        
    <unique>true</unique>
        
</fields>
    <fields>
        
    <fullName>First_Name__c</fullName>
        
        
    <label>First Name</label>
        
    <length>30</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Last_Name__c</fullName>
        
        
    <label>Last Name</label>
        
    <length>30</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Phone__c</fullName>
        
        
    <label>Phone</label>
        
        
        
        
    <type>Phone</type>
        
</fields>
    <fields>
        
    <fullName>Shipping_City__c</fullName>
        
        
    <label>Shipping City</label>
        
    <length>20</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Shipping_State__c</fullName>
        
        
    <inlineHelpText>State&apos;s acronym i.e. Georgia is GA</inlineHelpText>
        
    <label>Shipping State</label>
        
    <length>2</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Shipping_Street__c</fullName>
        
        
    <label>Shipping Street</label>
        
    <length>30</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Shipping_Zip_Code__c</fullName>
        
        
    <label>Shipping Zip Code</label>
        
    <length>10</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Ship_to_Billing_Address__c</fullName>
        
    <defaultValue>false</defaultValue>
        
    <description>Is the shipping address the same as your billing address?</description>
        
        
    <label>Ship to Billing Address</label>
        
        
        
    <type>Checkbox</type>
        
</fields>
    <fields>
        
    <fullName>State__c</fullName>
        
        
    <inlineHelpText>Use state&apos;s initials i.e. GA-Georgia</inlineHelpText>
        
    <label>State</label>
        
    <length>2</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Street_Address__c</fullName>
        
        
    <label>Street Address</label>
        
    <length>40</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Work_Order__c</fullName>
        
    <deleteConstraint>SetNull</deleteConstraint>
        
        
    <label>Work Order</label>
        
    <referenceTo>WorkOrder</referenceTo>
        
    <relationshipLabel>Customers</relationshipLabel>
        
    <relationshipName>Customers</relationshipName>
        
        
        
        
    <type>Lookup</type>
        
</fields>
    <fields>
        
    <fullName>Zip__c</fullName>
        
        
    <label>Zip</label>
        
    <length>10</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <validationRules>
        
    <fullName>Card_American_Express_Format</fullName>
        
    <active>true</active>
        
    <errorConditionFormula>ISPICKVAL(Credit_Card_Type__c, &quot;American Express&quot;) &amp;&amp; NOT(REGEX(Credit_Card_Number__c, &quot;[0-9]{4}-[0-9]{6}-[0-9]{4}&quot;))</errorConditionFormula>
        
    <errorDisplayField>Credit_Card_Number__c</errorDisplayField>
        
    <errorMessage>Invalid Format. American Express credit card format is ####-######-####. Please enter a credit card with this formatting.</errorMessage>
        
</validationRules>
    <validationRules>
        
    <fullName>Must_Have_a_CC</fullName>
        
    <active>true</active>
        
    <description>Each Customer must have a complete credit card.</description>
        
    <errorConditionFormula>IF( Credit_Card_Number__c = NULL  || 
 ISPICKVAL(Credit_Card_Type__c, &quot;&quot;) ||
  ISPICKVAL(Credit_Card_Expiration_Month__c, &quot;&quot;) ||
  ISPICKVAL(Credit_Card_Expiration_Year__c, &quot;&quot;), true, false)</errorConditionFormula>
        
    <errorDisplayField>Credit_Card_Type__c</errorDisplayField>
        
    <errorMessage>Each Customer must have complete credit card information to proceed.</errorMessage>
        
</validationRules>
    <validationRules>
        
    <fullName>Visa_Mastercard_Discover_Formatting</fullName>
        
    <active>true</active>
        
    <description>Formats the card number to ####-####-####-#### when it is Visa, Mastercard, or Discover</description>
        
    <errorConditionFormula>NOT(ISPICKVAL(Credit_Card_Type__c, &quot;American Express&quot;)) &amp;&amp; 
NOT(REGEX(Credit_Card_Number__c, &quot;[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}&quot;))</errorConditionFormula>
        
    <errorMessage>Incorrect Format. The format for Visa, Mastercard, and Discover is ####-####-####-####. Please enter the card number as such or select a different card.</errorMessage>
        
</validationRules>
    <listViews>
        
    <fullName>All</fullName>
        
    <filterScope>Everything</filterScope>
        
    <label>All</label>
        
</listViews>
</CustomObject>